[gd_scene load_steps=8 format=2]

[ext_resource path="res://level/Arena.gd" type="Script" id=1]
[ext_resource path="res://level/RoundManager.gd" type="Script" id=2]
[ext_resource path="res://core/utils/ActivationArea.gd" type="Script" id=3]
[ext_resource path="res://level/ActorSpawnGroups.gd" type="Script" id=4]
[ext_resource path="res://level/levels/CameraLimitTrigger.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 145.374, 176.194 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 61.8209, 52.2615 )

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="RoundManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
shape = SubResource( 1 )

[node name="ActorSpawnGroups" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Group1" type="Node2D" parent="ActorSpawnGroups"]

[node name="Walls" type="Node2D" parent="."]

[node name="CameraLimitTrigger" parent="." instance=ExtResource( 5 )]

[node name="ColliderTrigger" parent="CameraLimitTrigger" index="1"]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="CameraLimitPositions" parent="CameraLimitTrigger" index="2"]
line_width = 10.0
[connection signal="all_actors_died" from="." to="RoundManager" method="next_round"]
[connection signal="round_started" from="RoundManager" to="." method="next_round_started"]
[connection signal="area_entered" from="ActivationArea" to="." method="_on_ActivationArea_area_entered"]

[editable path="CameraLimitTrigger"]
